k8s/department-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department
spec:
  replicas: 1
  selector:
    matchLabels:
      app: department
  template:
    metadata:
      labels:
        app: department
    spec:
      containers:
      - name: department
        image: danmich/tesys-prova:department
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: department
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: department
