k8s/employee-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employeeservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employeeservice
  template:
    metadata:
      labels:
        app: employeeservice
    spec:
      containers:
      - name: employeeservice
        image: danmich/tesys-prova:employeeservice
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: employeeservice
spec:
  type: ClusterIP
  ports:
  - port: 8082
    targetPort: 8082
  selector:
    app: employeeservice
