k8s/eureka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: danmich/tesys-prova:eureka
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  type: ClusterIP
  ports:
  - port: 8083
    targetPort: 8083
  selector:
    app: eureka-server
